[package]
name = "rcmath"
version = "0.0.2"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Rust Cryptographic Math Library."
repository = "https://github.com/rust-cc/rcmath"
keywords = ["math", "cryptography", "integer", "pairing", "finite fields"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
#build = "build.rs"

[dependencies]
derivative = { version = "2", features = ["use_core"] }
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }
unroll = { version = "=0.1.4" }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[build-dependencies]
field-assembly = { path = "./field-assembly" }
rustc_version = "0.2"

[dev-dependencies]
rand_xorshift = "0.2"

[features]
default = [ "std" ]
std = []
parallel = [ "std", "rayon" ]
llvm_asm = []
