[package]
name = "rcmath"
version = "0.0.2"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Rust Cryptographic Math Library."
repository = "https://github.com/rust-cc/rcmath"
keywords = ["math", "cryptography", "integer", "pairing", "finite fields"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
#build = "build.rs"

[dependencies]
rand_core = "0.5"
derivative = { version = "2", features = ["use_core"] }
rayon = { version = "1", optional = true }
unroll = { version = "=0.1.4" }
quote = { version = "1", optional = true }
syn = { version = "1", optional = true }

ff_derive = { path = "ff_derive", optional = true }

[dependencies.serde_crate]
package = "serde"
version = "1"
default-features = false
features = ["derive"]
optional = true

[build-dependencies]
#rustc_version = "0.2"

[dev-dependencies]
rand_xorshift = "0.2"
ff_derive = { path = "ff_derive" }

[features]
default = [ "std" ]
std = []
parallel = [ "std", "rayon" ]
asm = ["quote", "syn"]
simd = []
derive = ["ff_derive"]
serde = ["serde_crate"]

pairing = []
bn_256 = ["pairing"]
bls12_381 = ["pairing"]
